Added kafka config
