# openapi/openapi.yaml
@@ -133,6 +133,44 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+  /v1/kafka:
+    get:
+      tags:
+        - kafka
+      summary: Send kafka
+      description: Send kafka
+      operationId: sendKafka
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: string
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        '404':
+          description: Template not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        '422':
+          description: Validation exception
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
 components:
   schemas:
     Error:
